# serializer version: 1
# name: test_all_entities[binary_sensor.mock_title_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mock_title_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'apsystems',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'off_grid_status',
    'unique_id': 'MY_SERIAL_NUMBER_off_grid_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.mock_title_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Mock Title Problem',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mock_title_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.mock_title_problem_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mock_title_problem_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'apsystems',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'dc_1_short_circuit_error_status',
    'unique_id': 'MY_SERIAL_NUMBER_dc_1_short_circuit_error_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.mock_title_problem_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Mock Title Problem',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mock_title_problem_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.mock_title_problem_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mock_title_problem_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'apsystems',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'dc_2_short_circuit_error_status',
    'unique_id': 'MY_SERIAL_NUMBER_dc_2_short_circuit_error_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.mock_title_problem_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Mock Title Problem',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mock_title_problem_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.mock_title_problem_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mock_title_problem_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'apsystems',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'output_fault_status',
    'unique_id': 'MY_SERIAL_NUMBER_output_fault_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.mock_title_problem_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Mock Title Problem',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mock_title_problem_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
